# piphone-agents

./: .gitignore  README.md  pyproject.toml
agents/: __init__.py
agents/coordinator/: coordinator.py
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/piphone/agents/: MainActivity.kt
android/app/src/main/java/com/piphone/agents/actions/: MediaActions.kt  MessagingActions.kt  NavigationActions.kt  SystemActions.kt
android/app/src/main/java/com/piphone/agents/core/: Action.kt  ActionManager.kt  AgentContext.kt  AgentLoop.kt  CactusAdapter.kt  CactusResult.kt  LLMClient.kt  LLMConfig.kt
android/app/src/main/java/com/piphone/agents/service/: AgentService.kt
android/app/src/main/java/com/piphone/agents/speech/: VoiceManager.kt
android/app/src/main/java/com/piphone/agents/ui/chat/: ChatScreen.kt
android/app/src/main/res/drawable/: ic_bubble.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  themes.xml
apk/: AndroidManifest.xml  build-apk.sh  piphone.apk  piphone.keystore
apk/res/values/: strings.xml
apk/src/com/piphone/agents/: MainActivity.java
core/: __init__.py  action_manager.py  agent_loop.py  android_intents.py  cactus_adapter.py  llm_client.py  plugin_api.py
docs/: 01_architecture.md  02_guest_api.md  03_plans.md  10_android_architecture.md
guests/: __init__.py  guest_base.py  guest_media.py  guest_messaging.py  guest_navigation.py  guest_system.py
tests/: test_core.py
(+2 files in other folders)
